# atlverse-classroom

./: .gitignore  .replit  README.md  ai_service.py  app.py  awards_utils.py  extensions.py  firebase_auth.py  firebase_service.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  simple_vector.py  supabase_full_backup.sql  test_quiz.py  utils.py  vector_service.py
attached_assets/: Pasted--1-Auth-State-Not-Persisted-Or-Not-Yet-Loaded-Problem-Your-app-might-be-checking-auth-currentU-1748323111697.txt  Pasted-Product-Requirements-Document-PRD-Project-Title-AI-Enhanced-Classroom-Web-App-Flask-HTML--1748228866443.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
instance/: classroom.db
migrations/versions/: 13e643162dcf_add_daily_quote_cache_table.py  1749444480_add_cpmk_model.py  32b428bffa0f_group_fields.py  4522d0661aa0_add_cpmk_tracking_feature.py  905f529162d8_allow_mixed_quiz_types.py  a53cd34e2d40_add_assignmentsubmission_model.py  af31788a534a_add_cpmk_m2m.py  b2d03246b7b6_merge_real_heads.py  b516d2d10f44_add_notification_table.py  b7ed4c1c6ea5_merge_heads.py  ba4fcc97d4fe_create_initial_tables.py  d1e6a086916b_add_assignment_model.py  (+3 more)
mobile-frontend/: README.md  package.json
mobile_app/: pubspec.yaml
static/: custom.css  manifest.json  sw.js
templates/: base.html  index.html  notifications.html
tests/: test_cpmk_model.py  test_cpmk_progress.py  test_group_assignment.py  test_mixed_quiz.py  test_quote_context.py
uploads/: 20250526_035752_2_Standar_Proses_Pembelajaran.docx
(+42 files in other folders)
